@@ -4,6 +4,9 @@ xorg-server (2:1.9.4-3) UNRELEASED; urgency=low
     - xserver-xorg-core.preinst.in: Remove, 1.5 is long gone.
     - xserver-xorg-core.postinst.in: Remove, 1.5 is long gone, and 1.7.4
       was between lenny and squeeze.
+    - xserver-xorg-core.postrm.in: Rename as xserver-xorg-core.postrm,
+      handling upgrades from 1.5 is no longer needed, only keep the logs
+      removal and the #DEBHELPER# placeholder.
 
  -- Cyril Brulebois <kibi@debian.org>  Sat, 19 Feb 2011 17:37:18 +0100
 
